--- a/index.html
+++ b/index.html
@@ -88,11 +88,6 @@
 			</div>
   		<h1 style="color:#004953" class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
 
-			<div id="cc-m-8081689085" class="j-module n j-htmlCode ">
-			<div class="message-info">
-    			<strong>Titre</strong> Texte
-			</div>
-			</div>
 		<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
@@ -211,10 +206,10 @@
 <!-- Origine -->
 			<h2> D'où viennent-ils? </h2>
 <div class="container" style="display:flex;justify-content:space-between;">		
-<iframe id="datawrapper-chart-3ODbC" src="//datawrapper.dwcdn.net/3ODbC/3/" frameborder="0" scrolling="no" allowtransparency="true" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" width="100%" height="322"></iframe> <script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["3ODbC"]={},window.datawrapper["3ODbC"].embedDeltas={"100":441,"200":360,"300":333,"400":333,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["3ODbC"].iframe=document.getElementById("datawrapper-chart-3ODbC"),window.datawrapper["3ODbC"].iframe.style.height=window.datawrapper["3ODbC"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["3ODbC"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("3ODbC"==b)window.datawrapper["3ODbC"].iframe.style.height=a.data["datawrapper-height"][b]+"px"}) </script>
-
-<iframe id="datawrapper-chart-sIMjl" src="//datawrapper.dwcdn.net/sIMjl/3/" frameborder="0" scrolling="no" allowtransparency="true" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" width="100%" height="322"></iframe> <script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["sIMjl"]={},window.datawrapper["sIMjl"].embedDeltas={"100":441,"200":360,"300":333,"400":333,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["sIMjl"].iframe=document.getElementById("datawrapper-chart-sIMjl"),window.datawrapper["sIMjl"].iframe.style.height=window.datawrapper["sIMjl"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["sIMjl"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("sIMjl"==b)window.datawrapper["sIMjl"].iframe.style.height=a.data["datawrapper-height"][b]+"px"}) </script>
-	</div>
+<iframe id="datawrapper-chart-3ODbC" src="//datawrapper.dwcdn.net/3ODbC/3/" frameborder="0" allowtransparency="true" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" width="100%" height="306"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["3ODbC"]={},window.datawrapper["3ODbC"].embedDeltas={"100":306,"200":306,"300":306,"400":306,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["3ODbC"].iframe=document.getElementById("datawrapper-chart-3ODbC"),window.datawrapper["3ODbC"].iframe.style.height=window.datawrapper["3ODbC"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["3ODbC"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("3ODbC"==b)window.datawrapper["3ODbC"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+	
+<iframe id="datawrapper-chart-sIMjl" src="//datawrapper.dwcdn.net/sIMjl/4/" frameborder="0" allowtransparency="true" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" width="100%" height="322"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["sIMjl"]={},window.datawrapper["sIMjl"].embedDeltas={"100":322,"200":322,"300":322,"400":322,"500":322,"600":322,"700":322,"800":322,"900":322,"1000":322},window.datawrapper["sIMjl"].iframe=document.getElementById("datawrapper-chart-sIMjl"),window.datawrapper["sIMjl"].iframe.style.height=window.datawrapper["sIMjl"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["sIMjl"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("sIMjl"==b)window.datawrapper["sIMjl"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+			</div>
 	
 			<h2> Quel âge ont-ils? </h2>
 <!-- Composition par âge de la population migrante -->
