--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 			<div class="container">
 				<header>
 					<h2>Demandes d'asiles et taux d'acceptation (2015)</h2>
-					<p>Lorem ipsum dolor sit amet adipisicing elit. Delectus consequatur sed tempus.</p>
+					<p>La France reçoit 6 fois moins de demandes d'asile que l'Allemagne </p>
 				</header>
 				<script id="infogram_0_map-9075157905404" title="Map" src="//e.infogr.am/js/dist/embed.js?H42" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:0px solid #dadada;margin:0 30px"><a href="https://infogr.am/map-9075157905404" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Map</a><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
 	</div>
