--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
 		Pour accéder à tous les détails en valeur absolue et relative, passez votre souris sur chacun des pays ou sur la barre graduée. <br> 
 		<br>
-		La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays. En 2015, 70 570 demandes d'asile ont été déposées en France par des individus ressortissants d'un pays n'appartenant pas à l'Union Européenne. 29% ont été acceptées. Le pays qui accepte la plus grande part relative des demandes qu'il reçoit est Chypre, avec un taux de 75%, suivi de Malte (74%) et le Danemark (48%). 
+		La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays. En 2015, 70 570 demandes d'asile ont été déposées en France par des individus ressortissants d'un pays n'appartenant pas à l'Union Européenne. 29% ont été acceptées. Le pays qui accepte la plus grande part relative des demandes qu'il reçoit est Chypre, avec un taux de 75%, suivi de Malte (74%) et du Danemark (48%). 
 	</div>
 	</div>
 	
