--- a/index.html
+++ b/index.html
@@ -436,31 +436,31 @@ $(document).ready(function(){
      "name": "bubble",
      "children": [{
        "name": "Accueil",
-       "description": "S'occuper des hébergements d'urgence et temporaires des réfugiés et demandeurs d'asile",
+       "description": "S'occuper des hébergements d'urgence et temporaires des réfugiés et demandeurs d'asile.",
        "children": [{
          "name": "Utopia56",
          "address": "http://www.utopia56.com/fr/user/register",
-         "note": "Aider 2h, 1 jour ou d’avantage dans un Centre d’Accueil et d’Orientation à Paris ou près de Calais"
+         "note": "Aider 2h, 1 jour ou d’avantage dans un Centre d’Accueil et d’Orientation à Paris ou près de Calais."
        }, {
          "name": "Singa Calm",
          "address": "http://calm.singa.fr/", 
-          "note": "Une chambre d’un particulier pour héberger un réfugié pendant 3 à 12 mois "
+          "note": "Une chambre d’un particulier pour héberger un réfugié pendant 3 à 12 mois. "
        }, {
          "name": "JRS",
          "address": "http://www.jrsfrance.org/welcome-en-france-refugie/",
-         "note": "Jesuit Refugee Service, Aller là où personne ne va : héberger un demandeur d’asile pendant 4 à 6 semaines."
+         "note": "Jesuit Refugee Service, aller là où personne ne va. Héberger un demandeur d’asile pendant 4 à 6 semaines."
        }]
      }, {
        "name": "Emploi",
-       "description": "Impliquer les entreprises et employés dans l'intégration des réfugiés",
+       "description": "Impliquer les entreprises et employés dans l'intégration des réfugiés.",
        "children": [{
          "name": "Action Emploi Réfugiés",
          "address": "http://www.actionemploirefugies.com/espace-editorial/notre-organisation-our-organization",
-         "note": "Une plateforme web d’offres et de demandes d’emplois pour les réfugiés"
+         "note": "Une plateforme web d’offres et de demandes d’emplois pour les réfugiés."
        }, {
          "name": "Kodiko",
          "address": "http://www.kodiko.fr/",
-         "note": "Un cadre d’entreprise en binôme avec un réfugié diplômé du supérieur pour intégrer le marché de l’emploi"
+         "note": "Un cadre d’entreprise en binôme avec un réfugié diplômé du supérieur pour intégrer le marché de l’emploi."
        },{
          "name": "Collège de France",
          "address": "http://www.college-de-france.fr/site/programme-pause/index.htm", 
@@ -472,7 +472,7 @@ $(document).ready(function(){
        "children": [{
          "name": "Wintegreat",
          "address": "http://wintegreat.org/#_overview", 
-         "note" : "Un accélérateur social au sein des Universités et Grandes écoles"
+         "note" : "Un accélérateur social au sein des Universités et Grandes écoles."
        }, {
          "name": "Sciences Po Refugee Help",
          "address": "http://www.refugeehelp.fr/", 
@@ -480,7 +480,7 @@ $(document).ready(function(){
        }, {
          "name": "Kiron",
          "address": "http://www.sciencespo.fr/sites/default/files/22062016_CP_Sciences%20Po_Kiron.pdf", 
-         "note" : "Sciences Po mets à disposition une sélection de cours sur la plateforme numérique de Kiron pour aider les réfugiés à reprendre leurs études supérieures"
+         "note" : "Sciences Po mets à disposition une sélection de cours sur la plateforme numérique de Kiron pour aider les réfugiés à reprendre leurs études supérieures."
        },{
          "name": "MigrENS",
          "address": "http://www.migrens.ens.fr/", 
@@ -488,36 +488,36 @@ $(document).ready(function(){
        }, {
          "name": "Black Sheep",
          "address": "http://blacksheephello.wixsite.com/blacksheep", 
-         "note" : "2 étudiantes, 11 mois et 12 pays pour repenser la politique d’intégration des réfugiés en France"
+         "note" : "2 étudiantes, 11 mois et 12 pays pour repenser la politique d’intégration des réfugiés en France."
        }]
      }, {
        "name": "Tech",
-       "description": "Réintégrer les scientifiques en exil, hackatons et tech au service des réfugiés",
+       "description": "Réintégrer les scientifiques en exil, hackatons et tech au service des réfugiés.",
        "children": [{
          "name": "Techfugees",
        "address":"https://techfugees.com/", 
-         "note": "Big data, hackatons et tech pour trouver des solutions d’aide aux réfugiés"
+         "note": "Big data, hackatons et tech pour trouver des solutions d’aide aux réfugiés."
        }, {
          "name": "Clouds over Sidra",
          "address": "https://with.in/watch/clouds-over-sidra/", 
-	   "note ": "Une immersion à 360° dans le camp d'Al-Zaatari, plus grand camp de réfugiés en Jordanie"
+	   "note ": "Une immersion à 360° dans le camp d'Al-Zaatari, plus grand camp de réfugiés en Jordanie."
        }, {
          "name": "The Displaced",
          "address": "https://with.in/watch/the-displaced/", 
-         "note":"Des témoignages à 360° de trois enfants réfugiés de Syrie, du Soudan du Sud et d'Ukraine "
+         "note":"Des témoignages à 360° de trois enfants réfugiés de Syrie, du Soudan du Sud et d'Ukraine. "
        },  {
          "name": "Jeu intéractif Arte",
          "address": "http://refugees.arte.tv/fr", 
-	   "note ": "Dans la peau d'un envoyé spécial pour raconter les camps de refugiés au Népal, en Irak et au Liban. "
+	   "note ": "Dans la peau d'un envoyé spécial pour raconter les camps de refugiés au Népal, en Irak et au Liban."
        }]
      },
         {
        "name": "Arts et Vie",
-       "description": "Profiles of Country",
+       "description": "Art, Cuisine, Musique...des bulles de liberté",
        "children": [{
          "name": "Les Grands Voisins",
          "address": "https://lesgrandsvoisins.org/leprojet/", 
-         "note":"Un village éphémère de 600 “mal-logés”, 400 professionnels (artistes, artisans, entrepreneurs sociaux ou associatifs…) sur le site de l’ancien hôpital Saint-Vincent de Paul…à découvrir avant la fin de l’été ! "
+         "note":"Un village éphémère de 600 “mal-logés”, 400 professionnels (artistes, entrepreneurs sociaux ou associatifs…) sur le site de l’ancien hôpital Saint-Vincent de Paul…à découvrir avant la fin de l’été ! "
        }, {
          "name": "Les Cuistots Migrateurs",
          "address": "http://lescuistotsmigrateurs.com/", 
@@ -525,39 +525,39 @@ $(document).ready(function(){
        },{
          "name": "Visa pour l'image",
          "address": "http://www.rfi.fr/culture/20160902-europe-photographie-journalisme-visa-image-dorigny-behrakis-messinis-crise-refugies", 
-         "note" :"Festival Visa pour l'image de Perpignan, Septembre 2016"
+         "note" :"Festival Visa pour l'image de Perpignan, Septembre 2016."
        }, {
          "name": "Cinéma",
          "address": "http://www.fondation-jeromeseydoux-pathe.com/Actu%20Immigrants ", 
-         "note":"Sélection de films par la Fondation Pathé-Seydoux autour de l'Immigration, jusqu'au 28 mars 2017 "
+         "note":"Sélection de films par la Fondation Pathé-Seydoux autour de l'Immigration, jusqu'au 28 mars 2017. "
        }, {
          "name": "Running",
          "address": "http://refugeesong.com/ ", 
-         "note":"La chanson Running de Andrea Pizziconi composée pour la Journée mondiale des réfugiés en 2016 "
+         "note":"La chanson Running de Andrea Pizziconi composée pour la Journée mondiale des réfugiés en 2016. "
        },{
          "name": "Sur ma route",
          "address": "https://www.youtube.com/watch?v=Psr2nMh_ve0", 
-         "note":"Une partie des bénéfices de l'album des Kids United est reversée à l'UNICEF "
+         "note":"Une partie des bénéfices de l'album des Kids United est reversée à l'UNICEF. "
        },{
          "name": "Refugees of Rap",
          "address": "https://noisey.vice.com/fr/article/refugees-of-rap-syriens-rappeurs-2015", 
-         "note":"Refugees of Rap : un duo de rap syrien"
+         "note":"Refugees of Rap : un duo de rap syrien."
        }, {
          "name": "BD Intéractive",
          "address": "http://info.arte.tv/fr/no-mans-land-de-cyrille-pomes", 
-         "note":"No Man's Land de Cyrille Pomès"
+         "note":"No Man's Land de Cyrille Pomès."
        }]
      }, {
        "name": "En direct",
-       "description": "Crop Data in 5 minutes grid",
+       "description": "Des actualisations régulières de la situation des réfugiés",
        "children": [{
          "name": "UNHCR",
          "address": "http://data2.unhcr.org/en/situations/mediterranean", 
-         "note": "Les chiffres actualisés des arrivées et disparitions en Méditerranée "
+         "note": "Les chiffres actualisés des arrivées et disparitions en Méditerranée. "
        }, {
          "name": "Jungle News",
          "address": "(http://jungle-news.arte.tv/fr/", 
-         "note":"Jungle News : les dernières nouvelles de Calais"
+         "note":"Jungle News : les dernières nouvelles de Calais."
        },  {
          "name": "The New Arrivals",
          "address": "https://thenewarrivals.eu/", 
@@ -565,7 +565,7 @@ $(document).ready(function(){
        },{
          "name": "Arte Reportage",
          "address": "http://info.arte.tv/fr/refugies", 
-         "note":"A travers cinq destinations, vingt regards de cinéastes, de photographes, d'écrivains et de dessinateurs de bande dessinée, la série multimédia d'ARTE Reportage vous raconte les camps de réfugiés"
+         "note":"A travers cinq destinations, vingt regards de cinéastes, de photographes, d'écrivains et de dessinateurs de bande dessinée, la série multimédia d'ARTE Reportage vous raconte les camps de réfugiés."
        }]
      }]
    };
