--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
 								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a></li>
-							Nous avons également utilisé les photos de Sebastiao Salgado pour illustrer notre propos.
+							Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/"><b>Sebastiao Salgado </b></a> pour illustrer notre propos.
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
