--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column;">
-				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées depuis 15 ans </font> </div>
-	
+				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans </font> </div>
+				<div> <font color="#24292E"> Plus de déplacés internes que de réfugiés depuis 2006 </font> </div>
+				<div> <font color="#24292E"> Trois fois plus de demandeurs d'asile depuis 2012 (cliquez sur la légende pour voir le changement d'échelles) </font> </div>
+
 					<div id="container" ></div>
 				</div>
 			
