--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   		<h1 style="color:#004953" class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
 
 		<!-- Graphe intro Irène -->
-			<h2> Réfugiés, demandeurs d'asile, déplacés internes...</h2>	
+			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column;">
 				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans </font> </div>
