--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<ul>
 						<li><a style="color:white" href="#one"> <font size="+1">De quoi parle-t-on ? </font ></a></li>
 						<li><a style="color:white" href="#two"><font size="+1">En Europe</font ></a></li>
-						<li><a style="color:white" href="#france"><font size="+1">En France</font ></a></li>
+						<li><a style="color:black" href="#france"><font size="+1">En France</font ></a></li>
 						<li><a style="color:white" href="#pol"><font size="+1">Immigration et politique</font ></a></li>
 						<li><a style="color:white" href="#quizz"><font size="+1">Quizz</font ></a></li>
 						<li><a style="color:white" href="#init"><font size="+1">Initiatives</font ></a></li>
@@ -92,7 +92,7 @@
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column;">
-				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans </font> </div>
+				<div> <font color="#24292E" size="large"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans </font> </div>
 				<div> <font color="#24292E"> Plus de déplacés internes que de réfugiés depuis 2006 </font> </div>
 				<div> <font color="#24292E"> Trois fois plus de demandeurs d'asile depuis 2012 (cliquez sur la légende pour voir le changement d'échelles) </font> </div>
 
@@ -101,12 +101,12 @@
 			
 				<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
 					<ul>
-						<li><b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
-						</li><br>
-<li> Est considéré comme <b>“Migrant”</b>, toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas un statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
-						</li><br>
-<li><b>Demandeur d’asile</b> : Un réfugié est un ancien demandeur d’asile mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
-						</li><br>
+					<li><b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
+					</li><br>
+					<li> Est considéré comme <b>“Migrant”</b>, toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas un statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
+					</li><br>
+					<li><b>Demandeur d’asile</b> : Un réfugié est un ancien demandeur d’asile mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
+					</li><br>
 <!-- Pour les gouvernements, cette distinction est importante. Les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. Les pays gèrent les réfugiés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales. Les pays ont des responsabilités précises envers les demandeurs d’asile sur leurs territoires et à leurs frontières.]]]
 				<br>
 <li><b>Déplacé interne </b>: Contrairement aux réfugiés, les déplacés internes n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. [[[En tant que citoyens, les déplacés internes conservent l’ensemble de leurs droits, dont celui à la protection en vertu des droits humains et des principe du droit international humanitaire.]]] </li> -->
@@ -186,7 +186,7 @@
 
 	<div class="container" style="display:flex;justify-content:space-between;">
 	<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
-		Pour accéder à tous les détails en valeur absolue et relative, passez votre souris sur chacun des pays ou sur la barre graduée. La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays.
+		Pour accéder aux détails en valeur absolue et relative, passez votre souris sur chacun des pays ou sur la barre graduée. La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays.
 		<br>
 		En 2015, 70 570 demandes d'asile ont été déposées en France par des individus ressortissants d'un pays n'appartenant pas à l'Union Européenne. 29% ont été acceptées. Le pays qui accepte la plus grande part relative des demandes qu'il reçoit est Chypre, avec un taux de 75%, suivi de Malte (74%) et du Danemark (48%). 	
 	</div>
