--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
   		<h1 style="color:#004953" class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
 
 		<!-- Graphe intro Irène -->
-			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent</h2>	
+			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent.</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
-			<div style="display:flex;flex-direction:column;">
-				<div> <font color="#24292E" size="large"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans </font> </div>
+			<div style="display:flex;flex-direction:column; text-align: justify">
+				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans </font> </div>
 				<div> <font color="#24292E"> Plus de déplacés internes que de réfugiés depuis 2006 </font> </div>
 				<div> <font color="#24292E"> Trois fois plus de demandeurs d'asile depuis 2012 (cliquez sur la légende pour voir le changement d'échelles) </font> </div>
 
