--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 				</div>
 			
 				<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
+					<p>La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des resposabilités différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales.</p>
+					<p>Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne</p>
 					<ul>
 					<li><b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
 					</li><br>
