--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<div style="font-size: 100px;">
 			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
-  		<h1 style="color:#004953" class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
+  		<h1 style="color:#004953" class="titre_section"> De quoi parle-t-on ? </h1>
 
 		<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent.</h2>	
