--- a/index.html
+++ b/index.html
@@ -508,15 +508,20 @@ $(document).ready(function(){
          "name": "Clouds over Sidra",
          "address": "https://with.in/watch/clouds-over-sidra/", 
 	   "note ": "Une immersion à 360° dans le camp d'Al-Zaatari, plus grand camp de réfugiés en Jordanie."
+       },{
+         "name": "Clouds over Sidra",
+         "address": "https://with.in/watch/clouds-over-sidra/", 
+         "note":"Une immersion à 360° dans le camp d'Al-Zaatari, plus grand camp de réfugiés en Jordanie."
        }, {
          "name": "The Displaced",
          "address": "https://with.in/watch/the-displaced/", 
          "note":"Des témoignages à 360° de trois enfants réfugiés de Syrie, du Soudan du Sud et d'Ukraine. "
-       },  {
+       }, 
+		    {
          "name": "Jeu intéractif Arte",
          "address": "http://refugees.arte.tv/fr", 
-	   "note ": "Dans la peau d'un envoyé spécial pour raconter les camps de refugiés au Népal, en Irak et au Liban."
-       }]
+         "note":"Dans la peau d'un envoyé spécial pour raconter les camps de refugiés au Népal, en Irak et au Liban."
+       } ]
      },
         {
        "name": "Arts et Vie",
