--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ $(document).ready(function(){
        "children": [{
          "name": "Les Grands Voisins",
          "address": "https://lesgrandsvoisins.org/leprojet/", 
-         "note":"Un village éphémère de 600 “mal-logés”, 400 professionnels (artistes, entrepreneurs sociaux ou associatifs…) sur le site de l’ancien hôpital Saint-Vincent de Paul…à découvrir avant la fin de l’été ! "
+         "note":"Un village éphémère de 600 “mal-logés”, 400 artistes, entrepreneurs sociaux ou associatifs…sur le site de l’ancien hôpital St-Vincent de Paul…à découvrir avant la fin de l’été ! "
        }, {
          "name": "Les Cuistots Migrateurs",
          "address": "http://lescuistotsmigrateurs.com/", 
